Update ContributionPackageProcessor to return List<URI>
git-svn-id: https://svn.apache.org/repos/asf/incubator/tuscany/java/sca@526289 13f79535-47bb-0310-9956-ffa450edef68